--- a/2026年终总结.md
+++ b/2026年终总结.md
@@ -16,7 +16,8 @@
 - [5. 总结词](#sec-5)
 
 ---
-<a id="sec-1"></a>
+
+<a id="sec-1" name="sec-1"></a>
 ## 1. 个人介绍
 
 ### 1.1 个人信息
@@ -36,9 +37,11 @@
   - 分析/渲染流程优化与兼容性维护
 
 ---
-<a id="sec-2"></a>
+
+<a id="sec-2" name="sec-2"></a>
 ## 2. 工作内容介绍
-<a id="sec-2-1"></a>
+
+<a id="sec-2-1" name="sec-2-1"></a>
 ## 2.1 工单方面
 
 ### 2.1.1 工单总量与分布
@@ -77,13 +80,14 @@
   - 长期下来能明显减少工单量（每周/每月可减少十几到二十个左右的重复问题单）
 
 ---
-<a id="sec-2-2"></a>
+
+<a id="sec-2-2" name="sec-2-2"></a>
 ## 2.2 脚本方面
 
 ### 2.2.1 学习与应用过程（从零基础到参与核心流程）
 - 入职初期脚本零基础：
   - 试用期到转正期间学习脚本
-  - 制作一系列小工具脚本帮助看单，例如Blender C4D环境配置脚本，C4D OOC定制脚本等，在没有看单工具之前的辅助测试脚本。
+  - 制作一系列小工具脚本帮助看单，例如 Blender / C4D 环境配置脚本、C4D OOC 定制脚本等，在没有看单工具之前用于辅助测试。
 - 逐步接入平台流程代码：
   - 5 月：开始处理平台流程代码，先从 Blender 分析流程入手
   - 随后：扩展到 Blender 渲染流程，并逐步覆盖更完整的流程链路
@@ -103,18 +107,18 @@
   2. 分析识别 UDIM 贴图
   3. 分析识别 USD 文件
   4. 识别几何节点缓存、流体烟雾模拟缓存
-  5. 插件Flip流体模拟缓存支持
+  5. 插件 Flip 流体模拟缓存支持
 - B：版本与生态兼容、流程稳定性
   1. 兼容 Extension 4.2 后插件安装方式；首选项配置错误时直接退出渲染流程
   2. 修复输出文件格式导致任务失败等
-  3. 兼容 Blender 5.0 合成节点出图, 新软件版本接口有更改，需要兼容
+  3. 兼容 Blender 5.0 合成节点出图（新版本接口有更改，需要兼容）
   4. Wheels 层级插件支持
 - C：渲染器支持
   - Blender V-Ray 支持
 - D：后管网页定制项支持
   - CUDA / OptiX、单卡、界面渲染、渲染分块尺寸等
 - E：资源与计费模式支持
-  - 一机多帧渲染一机一扣费支持
+  - 一机多帧渲染、一机一扣费支持
 
 **A2. 解决的问题与脚本价值**
 - 多端口兼容提升维护性；支持更多文件类型与缓存抓取，减少资产相关工单，提高渲染体验
@@ -124,12 +128,12 @@
 - 支持 Blender 一机一扣费
 
 **A3. 插件端提交开发**
-- 首选项偏好设置:
-  - ![Pre](Pre.png)
-- 插件软件配置栏:
-  - ![Pre](Start.png)
-- 首选项偏好设置:
-  - ![Pre](Scene.png)
+- 首选项偏好设置：
+  ![Pre](https://raw.githubusercontent.com/Weiyuze0821/2026Summary/main/Pre.png)
+- 插件软件配置栏：
+  ![Start](https://raw.githubusercontent.com/Weiyuze0821/2026Summary/main/Start.png)
+- 场景详细参数设置：
+  ![Scene](https://raw.githubusercontent.com/Weiyuze0821/2026Summary/main/Scene.png)
 
 ---
 
@@ -143,18 +147,18 @@
   2. OC / RS 多通道设置错误导致失败：保证 `"regular-on": "1"`
   3. 修复 EXR 默认输出 RGBA：改为仅在存在 Alpha 时添加 A，默认输出 RGB
   4. OC 场景设置不正确导致 SAVE 主图颜色被覆盖：增加分析警告
-  5. OC AOV 输出 Cryp 通道 格式设置错误导致渲染失败：增加分析警告
+  5. OC AOV 输出 Cryp 通道格式设置错误导致渲染失败：增加分析警告
 - C：模拟资产分析与抓取上传
   - 支持软件内自带特定模拟类型资产分析与自动抓取
 
 **B2. 解决的问题与业务价值**
-- C4D 2026 色彩空间变化导致 RS 渲染色彩不正确：修复后可开放 2026 RS，同时覆盖 2025 老色彩空间bug问题
+- C4D 2026 色彩空间变化导致 RS 渲染色彩不正确：修复后可开放 2026 RS，同时覆盖 2025 老色彩空间 bug 问题
 - 通过分析警告前置与资产自动抓取，减少“提交后失败/效果不对”的二次修改与返工，降低工单数量
 - 解决模拟丢失效果不对问题，提高一次提交成功率与用户体验
 
 ---
 
-#### C. AE
+### C. AE
 
 **C1. 当前进展**
 - AE 脚本使用 JavaScript：学习新语言并开始开发 AE 分析脚本
@@ -171,7 +175,7 @@
 ### 2.2.3 脚本开发的问题与经验总结
 
 #### 1) 开发遇到的问题
-1. 软件API 接口定位不清晰，导致搜索时间成本高：需要花较多时间在官方文档中寻找对应实现接口
+1. 软件 API 接口定位不清晰，导致搜索时间成本高：需要花较多时间在官方文档中寻找对应实现接口
 2. 自身脚本习惯原因，开始写脚本的时候兼容性覆盖不足：新功能未充分兼容旧版本，测试漏项导致上线后需二次返工
 3. 初期存在重复造轮子：已有能力未直接复用，造成时间浪费
 4. 提交与合并规范不足：
@@ -196,7 +200,8 @@
    - 关键节点有日志，便于回归与排查问题
 
 ---
-<a id="sec-2-3"></a>
+
+<a id="sec-2-3" name="sec-2-3"></a>
 ## 2.3 工作内容总结
 - 工单与脚本工作相辅相成：
   - 工单处理越多，越能明确脚本需要解决的真实痛点与调用链路
@@ -207,14 +212,15 @@
   - 插件未启用：可通过流程检查与兜底机制降低失败率
 
 ---
-<a id="sec-3"></a>
+
+<a id="sec-3" name="sec-3"></a>
 ## 3. 2026 年工作规划
 
 1. 继续维护 Blender 与 C4D 脚本：
    - 支持新功能
    - 修复 Bug
    - 优化分析/渲染流程以减少重复性工单
-   - 优化配置环境速度 以及想办法兼容疑难杂症问题，提升用户提交的体验
+   - 优化配置环境速度，以及想办法兼容疑难杂症问题，提升用户提交的体验
 2. 协助部门内开发需求：
    - 有需要参与协作的功能，积极配合完成交付
 3. 第一季度完成 AE 提交与渲染流程开发：
@@ -227,7 +233,8 @@
    - 查漏补缺，巩固已有能力，持续补足短板
 
 ---
-<a id="sec-4"></a>
+
+<a id="sec-4" name="sec-4"></a>
 ## 4. 部门或工作流程建议
 
 ### 4.1 机器性能相关建议
@@ -245,14 +252,15 @@
    - 建议：补充部分高性能 CPU 机型资源或优化调度策略，提高复杂场景的可用性
 
 ### 4.2 工作流程建议
-- 今年感受：组长全年持续在帮助大家提升工单处理效率,优化平台产能等等方面，相较于刚入职来看单的过程，和工单的数量都有很明显的提升，
-- 只是我负责的软件的感觉年底比年初要少三分之一多的工单量随着贲哥的看单工具持续迭代，看单效率更提升明显，节省大量时间
-- 来年期望：希望看单工具的累计的小需求处理完后，和目前处理的包管理流程弄完，能在配置软件插件方面减少重复的时间，现在配置完一个插件要传到所有区就比较麻烦
+- 今年感受：组长全年持续在帮助大家提升工单处理效率、优化平台产能等方面，相较于刚入职时，看单过程和工单数量都有很明显的改善。
+- 就我负责的软件来看，年底比年初大概少了三分之一的工单量。随着贲哥的看单工具持续迭代，看单效率提升很明显，也节省了很多时间。
+- 来年期望：希望看单工具累计的小需求处理完后，配合包管理流程完善，能在配置软件插件方面减少重复操作的时间（现在配置完一个插件要同步到所有区会比较麻烦）。
 
 ---
-<a id="sec-5"></a>
+
+<a id="sec-5" name="sec-5"></a>
 ## 5. 总结词
-- 过去一年收获很大：从之前的产品动画岗位转到当前岗位，相当于转行，入职前没有脚本开发经验，但在平台和团队的支持下，我接触并学习了很多新的知识。和以前相比，现在的工作更偏向于定位问题、解决问题，再到脚本实现功能并上线验证，反馈也更直接、更明确。这类反馈让我更有成就感，也让我更愿意投入精力，把我负责的工作做的更好。
+- 过去一年收获很大：从之前的产品动画岗位转到当前岗位，相当于转行，入职前没有脚本开发经验，但在平台和团队的支持下，我接触并学习了很多新的知识。和以前相比，现在的工作更偏向于定位问题、解决问题，再到脚本实现功能并上线验证，反馈也更直接、更明确。这类反馈让我更有成就感，也让我更愿意投入精力，把我负责的工作做得更好。
 - 非常感谢组长：
   - 从入职起在工单与脚本方面倾囊相授，有问必答
   - 目前能够独立维护 Blender 与 C4D 脚本，离不开组长的帮助与指导
